# ApplAI_

./: .replit  Generated Resume.tex  Pasted-Here-s-the-user-flow-for-the-application-detailing-each-step-the-technologies-being-used-and-what-1727454145415.txt  README.md  file_structure.css  firebase_auth.py  generated_resume.tex  job_scraper.py  main.py  pyproject.toml  replit.nix  resume_cover_letter_generation.py  resume_processing.py
.streamlit/: config.toml
extension/: background.js  content.js  manifest.json  popup.html  popup.js
templates/: latex_cover_letter_format_end.tex  latex_cover_letter_format_start.tex  latex_resume_format_start.tex
