[tool.poetry]
name = "repl-nix-jobappai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.50.1"
trafilatura = "^1.12.2"
streamlit = "^1.38.0"
firebase-admin = "^6.5.0"
pypdf2 = "^3.0.1"
scrapegraphai = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
